@@ -1,3 +1,18 @@
+##
+# The YAML module allows you to use one of the two YAML engines that ship with
+# ruby.  By default Psych is used but the old and unmaintained Syck may be
+# chosen.
+#
+# See Psych or Syck for usage and documentation.
+#
+# To set the YAML engine to syck:
+#
+#   YAML::ENGINE.yamler = 'syck'
+#
+# To set the YAML engine back to psych:
+#
+#   YAML::ENGINE.yamler = 'psych'
+
 module YAML
   class EngineManager # :nodoc:
     attr_reader :yamler
@@ -26,6 +41,9 @@ module YAML
       engine
     end
   end
+
+  ##
+  # Allows changing the current YAML engine.  See YAML for details.
 
   ENGINE = YAML::EngineManager.new
 end
